--- a/src/client/index.html
+++ b/src/client/index.html
@@ -37,10 +37,21 @@
 		<div class="container invisible" id="ingame-skin-set">
 			<h1 class="text-center" id="ingame-skin-set-title"><!-- Title -->></h1>
 			<div id="ingame-skins">
-				
+				<!-- In-game skins -->
 			</div>
 		</div>
 
+		<div class="container invisible" id="custom-creator">
+			<h1 class="text-center" id="custom-creator-title"><!-- Title -->></h1>
+			<div class="card buttons" id="custom-sets"></div>
+		</div>
+
+		<div class="container invisible" id="custom-set">
+			<h1 class="text-center" id="custom-set-title"><!-- Title -->></h1>
+			<div id="custom-set-skins">
+				<!-- Custom set skins -->
+			</div>
+		</div>
 		<script src="index.js" type="module"></script>
 	</body>
 </html>
