Idk what to name my commits

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Defly SkinLib</title>
+		<link rel="stylesheet" href="index.css" />
 	</head>
 	<body data-set-preferred-mode-onload="true">
 		<div class="container loader">
@@ -52,6 +53,11 @@
 				<!-- Custom set skins -->
 			</div>
 		</div>
+
+		<dialog class="modal" id="modal">
+			Just a buncha text
+		</dialog>
+
 		<script src="index.js" type="module"></script>
 	</body>
 </html>
