Added an image button

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -55,7 +55,8 @@
 		</div>
 
 		<dialog class="modal" id="modal">
-			Just a buncha text
+			<div class="align-right"><button class="close-button" onclick="closeImages()"></button></div> 
+			<div id="modal-content"></div>
 		</dialog>
 
 		<script src="index.js" type="module"></script>
