--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,6 +5,23 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Defly SkinLib</title>
 		<link rel="stylesheet" href="index.css" />
+		<link
+			rel="icon"
+			type="image/png"
+			href="https://defly.monster/favicon/favicon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/svg"
+			href="https://defly.monster/favicon/favicon.svg"
+		/>
+		<meta name="description" content="Unleash your inner defly monster!" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Defly SkinLib" />
+		<meta
+			property="og:description"
+			content="Unleash your inner defly monster!"
+		/>
 	</head>
 	<body data-set-preferred-mode-onload="true">
 		<div class="container loader">
@@ -55,7 +72,9 @@
 		</div>
 
 		<dialog class="modal" id="modal">
-			<div class="align-right"><button class="close-button" onclick="closeImages()"></button></div> 
+			<div class="align-right">
+				<button class="close-button" onclick="closeImages()"></button>
+			</div>
 			<div id="modal-content"></div>
 		</dialog>
 
