--- a/src/client/index.html
+++ b/src/client/index.html
@@ -32,6 +32,11 @@
 		</div>
 		<div class="container invisible" id="root">
 			<h1 class="text-center">Defly SkinLib</h1>
+			<div class="text-center btn-large">
+				<a class="btn" role="button" href="allSkinsZip"
+					>Download all skins (ZIP)</a
+				>
+			</div>
 			<div class="card">
 				<h2 class="card-title">Skin creators</h2>
 				<div class="text-center buttons" id="skin-creators">
