Updates for hero

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,143 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Defly SkinLib</title>
-		<link rel="stylesheet" href="index.css" />
-		<link
-			rel="icon"
-			type="image/png"
-			href="https://defly.monster/favicon/favicon.png"
-		/>
-		<link
-			rel="icon"
-			type="image/svg"
-			href="https://defly.monster/favicon/favicon.svg"
-		/>
-		<meta name="description" content="Unleash your inner defly monster!" />
-		<meta property="og:type" content="website" />
-		<meta property="og:title" content="Defly SkinLib" />
-		<meta
-			property="og:description"
-			content="Unleash your inner defly monster!"
-		/>
-	</head>
-	<body>
-		<div class="container loader">
-			<h1 class="text-center">Defly SkinLib</h1>
-			<div class="lds-dual-ring"></div>
-			<p>Browse all of defly.io's skins and custom skins</p>
-		</div>
-		<div class="container invisible" id="root">
-			<h1 class="text-center">Defly SkinLib</h1>
-			<div class="text-center btn-large">
-				<a
-					class="btn"
-					role="button"
-					href="allSkinsZip"
-					id="download-button"
-				></a>
-			</div>
-			<div class="card">
-				<h2 class="card-title">Skin creators</h2>
-				<div class="text-center buttons" id="skin-creators">
-					<!-- Skin creators -->
-				</div>
-			</div>
-			<div class="card">
-				<h2 class="card-title">In-game skins</h2>
-				<div class="text-center buttons" id="ingame-skin-sets">
-					<!-- In-game skin sets -->
-				</div>
-			</div>
-			<div class="card">
-				<h2 class="card-title">Hidden skins</h2>
-				<div class="text-center buttons" id="hidden-skin-sets">
-					<!-- In-game skin sets -->
-				</div>
-			</div>
-		</div>
 
-		<div class="container invisible" id="ingame-skin-set">
-			<h1 class="text-center" id="ingame-skin-set-title"><!-- Title --></h1>
-			<div id="ingame-skins">
-				<!-- In-game skins -->
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Defly SkinLib</title>
+	<link rel="stylesheet" href="index.css" />
+	<meta name="description" content="Unleash your inner defly monster!" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Defly SkinLib" />
+	<meta property="og:description" content="Unleash your inner defly monster!" />
+</head>
+
+<body>
+	<div class="container loader">
+		<h1 class="text-center">Defly SkinLib</h1>
+		<div class="lds-dual-ring"></div>
+		<p>Browse all of defly.io's skins and custom skins</p>
+	</div>
+	<div class="container invisible" id="root">
+		<h1 class="text-center">Defly SkinLib</h1>
+		<div class="text-center btn-large">
+			<a class="btn" role="button" href="allSkinsZip" id="download-button"></a>
+		</div>
+		<div class="card">
+			<h2 class="card-title">Skin creators</h2>
+			<div class="text-center buttons" id="skin-creators">
+				<!-- Skin creators -->
 			</div>
 		</div>
-
-		<div class="container invisible" id="custom-creator">
-			<h1 class="text-center" id="custom-creator-title"><!-- Title --></h1>
-			<div id="custom-sets"></div>
-			<div id="single-skins"></div>
-		</div>
-
-		<div class="container invisible" id="custom-set">
-			<h1 class="text-center" id="custom-set-title"><!-- Title --></h1>
-			<div id="custom-set-skins">
-				<!-- Custom set skins -->
+		<div class="card">
+			<h2 class="card-title">In-game skins</h2>
+			<div class="text-center buttons" id="ingame-skin-sets">
+				<!-- In-game skin sets -->
 			</div>
 		</div>
-
-		<dialog onclick="this.close()" class="modal" id="modal">
-			<div onclick="event.stopPropagation()">
-				<div class="align-right">
-					<span id="preview-buttons" class="invisible">
-						<select id="idle-select">
-							<option value="moving">Moving</option>
-							<option value="idle">Idle</option>
-						</select>
-						<select id="color-select">
-							<option value="3d5dff">Blue</option>
-							<option value="4d4d4d">Gray</option>
-							<option value="fd3535">Red</option>
-							<option value="008037">Dark Green</option>
-							<option value="ff8a2a">Orange</option>
-							<option value="924bff">Purple</option>
-							<option value="55d5ff">Sky Blue</option>
-							<option value="18e21f">Light Green</option>
-							<option value="f659ff">Pink</option>
-							<option value="f7ff2a">Yellow</option>
-							<option value="ff5eae">Rose Pink</option>
-							<option value="93fe00">Lime Green</option>
-							<option value="00ffbb">Turquoise</option>
-						</select>
-						<button class="modal-button" id="download-image">Image</button>
-						<button class="modal-button" id="skin-download">Record</button>
-					</span>
-					<button class="modal-button" onclick="closeModal()">Close</button>
-				</div>
-				<div id="modal-content"></div>
+		<div class="card">
+			<h2 class="card-title">Hidden skins</h2>
+			<div class="text-center buttons" id="hidden-skin-sets">
+				<!-- In-game skin sets -->
 			</div>
-		</dialog>
-		<div class="footer">
-			<a href="https://github.com/zisra/skin-lib"
-				><svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-					<path
-						d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
-					></path></svg
-			></a>
-			<a href="https://defly.monster"
-				><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-					<path
-						d="m21.743 12.331-9-10c-.379-.422-1.107-.422-1.486 0l-9 10a.998.998 0 0 0-.17 1.076c.16.361.518.593.913.593h2v7a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-4h4v4a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-7h2a.998.998 0 0 0 .743-1.669z"
-					></path></svg
-			></a>
-			<a href="https://join.defly.monster"
-				><svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-					<path
-						d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276 12.2986 12.2986 0 01-1.873.8914.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286zM8.02 15.3312c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.9555 2.4189-2.1569 2.4189zm7.9748 0c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9554-2.4189 2.1569-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.4189-2.1568 2.4189Z"
-					></path></svg
-			></a>
-			<a href="https://discord.gg/fXyX5ktnP6">
-				<img
-					class="discord-invite"
-					height="90px"
-					src="img/deflySkinCommunity.png"
-					alt="Defly Skin Community"
-				/>
-			</a>
 		</div>
-		<script src="index.js" type="module"></script>
-	</body>
+	</div>
+
+	<div class="container invisible" id="ingame-skin-set">
+		<h1 class="text-center" id="ingame-skin-set-title"><!-- Title --></h1>
+		<div id="ingame-skins">
+			<!-- In-game skins -->
+		</div>
+	</div>
+
+	<div class="container invisible" id="custom-creator">
+		<h1 class="text-center" id="custom-creator-title"><!-- Title --></h1>
+		<div id="custom-sets"></div>
+		<div id="single-skins"></div>
+	</div>
+
+	<div class="container invisible" id="custom-set">
+		<h1 class="text-center" id="custom-set-title"><!-- Title --></h1>
+		<div id="custom-set-skins">
+			<!-- Custom set skins -->
+		</div>
+	</div>
+
+	<dialog onclick="this.close()" class="modal" id="modal">
+		<div onclick="event.stopPropagation()">
+			<div class="align-right">
+				<span id="preview-buttons" class="invisible">
+					<select id="idle-select">
+						<option value="moving">Moving</option>
+						<option value="idle">Idle</option>
+					</select>
+					<select id="color-select">
+						<option value="3d5dff">Blue</option>
+						<option value="4d4d4d">Gray</option>
+						<option value="fd3535">Red</option>
+						<option value="008037">Dark Green</option>
+						<option value="ff8a2a">Orange</option>
+						<option value="924bff">Purple</option>
+						<option value="55d5ff">Sky Blue</option>
+						<option value="18e21f">Light Green</option>
+						<option value="f659ff">Pink</option>
+						<option value="f7ff2a">Yellow</option>
+						<option value="ff5eae">Rose Pink</option>
+						<option value="93fe00">Lime Green</option>
+						<option value="00ffbb">Turquoise</option>
+					</select>
+					<button class="modal-button" id="freeze-image">Freeze</button>
+					<button class="modal-button" id="download-image">Image</button>
+					<button class="modal-button" id="skin-download">Record</button>
+				</span>
+				<button class="modal-button" onclick="closeModal()">Close</button>
+			</div>
+			<div id="modal-content"></div>
+		</div>
+	</dialog>
+	<div class="footer">
+		<a href="https://github.com/zisra/skin-lib"><svg role="img" viewBox="0 0 24 24"
+				xmlns="http://www.w3.org/2000/svg">
+				<path
+					d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12">
+				</path>
+			</svg></a>
+		<a href="https://defly.monster"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+				<path
+					d="m21.743 12.331-9-10c-.379-.422-1.107-.422-1.486 0l-9 10a.998.998 0 0 0-.17 1.076c.16.361.518.593.913.593h2v7a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-4h4v4a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-7h2a.998.998 0 0 0 .743-1.669z">
+				</path>
+			</svg></a>
+		<a href="https://join.defly.monster"><svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+				<path
+					d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276 12.2986 12.2986 0 01-1.873.8914.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286zM8.02 15.3312c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.9555 2.4189-2.1569 2.4189zm7.9748 0c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9554-2.4189 2.1569-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.4189-2.1568 2.4189Z">
+				</path>
+			</svg></a>
+		<a href="https://discord.gg/fXyX5ktnP6">
+			<img class="discord-invite" height="90px" src="img/deflySkinCommunity.png" alt="Defly Skin Community" />
+		</a>
+	</div>
+	<script src="index.js" type="module"></script>
+</body>
+
 </html>
